--- a/rules
+++ b/rules
@@ -16,11 +16,11 @@ export DH_VERBOSE=1
 # This has to be exported to make some magic below work.
 export DH_OPTIONS
 
-include /usr/share/cdbs/1/class/python-distutils.mk
+#include /usr/share/cdbs/1/class/python-distutils.mk
 
 %:
 	dh $@ --with python2
 
-clean: 
+clean:
 	dh clean
 	find . -name "*.omc" | xargs rm
